5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1630_2942.log
== TEST (2019-04-02 17:01:10) 
-- CODE:
a=12

-- OUTPUT:
24798.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:04:05) 
-- CODE:
donuts = 12

ovos = 2
leite = 150
farinha = 120

imprima (ovos, leite, farinha)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    imprima (ovos, leite, farinha)
NameError: name 'imprima' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:04:29) 
-- CODE:
donuts = 12

ovos = 2
leite = 150
farinha = 120

imprim (ovos, leite, farinha)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    imprim (ovos, leite, farinha)
NameError: name 'imprim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:04:40) 
-- CODE:
donuts = 12

ovos = 2
leite = 150
farinha = 120

print (ovos, leite, farinha)
-- OUTPUT:
2 150 120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:09:21) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2)

print (q1)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:24) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1)
print (q2)
print (q3)
-- OUTPUT:
24
1800
1440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:46) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1 "ovos")
print (q2 "leite")
print (q3 "farinha")
-- ERROR:
File "XXXX", line 12
    print (q1 "ovos")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:14:18) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1)
print (q2)
print (q3)
-- EXECUTION TIME:
0.121354
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
24
1800
1440
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
24
1800
1440
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:22) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1)
print (q2)
print (q3)
-- OUTPUT:
24
1800
1440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:33:39) 
-- CODE:
var1 = 12 #donuts

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1)
print (q2)
print (q3)
-- EXECUTION TIME:
0.136169
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
24
1800
1440
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
24
1800
1440
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:47) 
-- CODE:
var1 = 12 #donuts
imput = var1

var2 = 2 #ovos
var3 = 150 #leite
var4 = 120 #farinha

q1 = (var1 * var2) #quantidade de ovos utilizado para 12 donuts
q2 = (var1 * var3) #quantidade de leite utilizados para 12 donuts
q3 = (var1 * var4) # quantidade de farinha utilizados para 12 donuts


print (q1)
print (q2)
print (q3)
-- OUTPUT:
24
1800
1440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:42) 
-- CODE:
var1 = 12 #donuts
imput = var1


-- OUTPUT:
24
1800
1440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:37:28) 
-- CODE:
var1 = 12 #donuts
imput = ("quantidade de donuts")
			


-- OUTPUT:
24
1800
1440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:37:58) 
-- CODE:
var1 = 12 #donuts
input var1
			


-- ERROR:
File "XXXX", line 2
    input var1
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:24) 
-- CODE:
var1 = 12 #donuts
input var1

			


-- ERROR:
File "XXXX", line 2
    input var1
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:39:28) 
-- CODE:
var1 = 12 #donuts
input ("quantidade de donuts")
print (var1)

			


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:41:05) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts")
print (var1)

			


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:41:50) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts")


			


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:20) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantos donuts?)


			


-- ERROR:
File "XXXX", line 2
    input ("quantos donuts?)
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:33) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantos donuts)


			


-- ERROR:
File "XXXX", line 2
    input ("quantos donuts)
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:57) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts")



			


-- ERROR:
File "XXXX", line 2
    input ("quantos donuts)
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:43:25) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts:")



			


-- ERROR:
File "XXXX", line 2
    input ("quantos donuts)
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:47:39) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts:")
quantidade = x input ("quantidade de donuts")

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
File "XXXX", line 3
    quantidade = x input()
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:18) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts:")
quantidade = x input("quantidade de donuts")

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
File "XXXX", line 3
    quantidade = x input()
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:57) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts:")
quantidade = input("quantidade de donuts")

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:33) 
-- CODE:
var1 = 12 #quantidade de donuts
input ("quantidade de donuts:")
quantidade = input("quantidade de donuts:")

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:52) 
-- CODE:
var1 = 12 #quantidade de donuts
quantidade = input("quantidade de donuts:")

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:19) 
-- CODE:
quantidade = input("quantidade de donuts:")
var1 = quantidade # quantidade de donuts

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:30) 
-- CODE:
quantidade = input("quantidade de donuts:")
var1 = quantidade # quantidade de donuts

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4




			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:10) 
-- CODE:
quantidade = input("quantidade de donuts:")
var1 = quantidade # quantidade de donuts

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4

print q1
print q2
print q3



			


-- ERROR:
File "XXXX", line 12
    print q1
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(q1)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:09) 
-- CODE:
quantidade = input("quantidade de donuts:")
var1 = quantidade # quantidade de donuts

var2 = 2 #ovos, unid
var3 = 150 # leite, ml
var4 = 120 # farinha, g

q1 = var1 * var2
q2 = var1 * var3
q3 = var1 * var4





			


-- ERROR:
File "XXXX", line 12
    print q1
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(q1)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
